fix: make the spacing in paragraphs with wells consistent
STN-379

--- a/docroot/themes/humsci/humsci_basic/src/scss/utilities/_wysiwyg-text-area.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/utilities/_wysiwyg-text-area.scss
@@ -1,7 +1,7 @@
 // WYSIWYG text area styles
 .field-hs-text-area {
   @include clearfix;
-  margin-bottom: hb-spacing-width();
+  margin-bottom: hb-calculate-rems(28px);
 
   h1,
   h2,
